# zepp-mcp

./: .env.example  LICENSE  README.md  huami_client.py  pyproject.toml  server.py  test_connection.py  test_health_events.py  test_sleep.py  test_sports.py  zepp_health_events.py  zepp_sleep.py  zepp_sports.py
