[project]
name = "zepp-mcp"
version = "0.1.0"
description = "MCP server exposing Zepp/Amazfit fitness data (workouts, sleep, health metrics) to AI agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "huami-token>=0.8.0",
    "mcp[cli]>=1.27.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]
